--- a/modules/async_fs/Cargo.toml
+++ b/modules/async_fs/Cargo.toml
@@ -7,13 +7,12 @@ edition = "2021"
 fatfs = ["dep:fatfs"]
 default = ["fatfs"]
 
-
 [dependencies]
 log = "0.4"
 cfg-if = "1.0"
 async_io = { path = "../async_io" }
 async_vfs = { path = "../async_vfs" }
-async_sync = { path = "../async_sync" }
+sync = { path = "../sync" }
 axdriver = { git = "https://github.com/Starry-OS/axdriver.git", features = ["block"] }
 axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
 capability = { git = "https://github.com/Starry-OS/capability.git" }
