--- a/modules/feat/Cargo.toml
+++ b/modules/feat/Cargo.toml
@@ -72,7 +72,7 @@ spinlock = { git = "https://github.com/Starry-OS/spinlock.git", optional = true 
 
 runtime = { path = "../runtime" }
 arch_boot = { path = "../arch_boot" }
-axhal = { path = "../async_axhal", package = "async_axhal" }
+axhal = { git = "https://github.com/Starry-OS/axhal.git" }
 async_fs = { path = "../async_fs", optional = true }
 sync = { path = "../sync", optional = true }
 trampoline = { path = "../trampoline", optional = true }
