Add support about thread.

--- a/modules/async_std/Cargo.toml
+++ b/modules/async_std/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [features]
 
+thread = ["trampoline/thread"]
+
 monolithic = ["feat/monolithic", "multitask"]
 
 img = ["feat/img"]
