--- a/modules/executor/Cargo.toml
+++ b/modules/executor/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [features]
+thread = ["taskctx/thread", "sync/thread", "task_api/thread"]
 irq = ["sync/irq"]
 
 preempt = ["irq", "percpu/preempt", "kernel_guard/preempt", "taskctx/preempt"]
@@ -25,12 +26,12 @@ lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
 xmas-elf = "0.9.0"
 bitflags = "2.6"
 log = "0.4"
-
+task_api = { path = "../task_api" }
 
 sync = { path = "../sync" }
 taskctx = { path = "../taskctx" }
 async_mem = { path = "../async_mem" }
 async_io = { path = "../async_io"}
 async_fs = { path = "../async_fs" }
-axhal = { path = "../async_axhal", package = "async_axhal" }
+axhal = { git = "https://github.com/Starry-OS/axhal.git" }
 riscv = "0.10"
