--- a/modules/sync/Cargo.toml
+++ b/modules/sync/Cargo.toml
@@ -9,11 +9,16 @@ keywords = ["Synchronization"]
 
 [features]
 irq = []
+thread = ["task_api/thread"]
 
 [dependencies]
+cfg-if = "1.0"
+log = "0.4"
 spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
 linked_list = { git = "https://github.com/Starry-OS/linked_list.git" }
 lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
 timer_list = { git = "https://github.com/Starry-OS/timer_list.git" }
-axhal = { path = "../async_axhal", package = "async_axhal" }
-log = "0.4"
+axhal = { git = "https://github.com/Starry-OS/axhal.git" }
+task_api = { path = "../task_api" }
+async_utils = { path = "../async_utils" }
+
