modify the Cargo.toml about workspace.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,3 @@
-[patch."https://github.com/Starry-OS/axhal.git".async_axhal]
-path = "modules/async_axhal"
-
 [profile.dev]
 lto = true
 
@@ -12,12 +9,27 @@ members = [
     "apps/helloworld", 
     "apps/user_boot", 
     "apps/fs/shell",
-    "modules/async_axhal",
+    "apps/thread_yield",
+
+    "evaluation",
+
     "modules/async_utils",
-    "modules/async_io", "modules/async_std", "modules/async_fs", "modules/async_vfs", "modules/async_api", 
-    "modules/async_mem", "modules/taskctx", "modules/trampoline", "modules/executor", "modules/sync", "modules/runtime", 
+    "modules/async_io", 
+    "modules/async_std", 
+    "modules/async_fs", 
+    "modules/async_vfs", 
+    "modules/aos_api", 
+    "modules/async_mem", 
+    "modules/taskctx", 
+    "modules/trampoline", 
+    "modules/executor", 
+    "modules/sync", 
+    "modules/runtime", 
     "modules/arch_boot", 
     "modules/syscall", 
-    "modules/feat"
+    "modules/feat", 
+    "modules/syscall_interfaces",
+    "modules/async_utils/afit", 
+    "modules/task_api"
 ]
 resolver = "2"
