Fixed bug about smp feature.

--- a/modules/executor/Cargo.toml
+++ b/modules/executor/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [features]
 thread = ["taskctx/thread", "sync/thread", "task_api/thread"]
 irq = ["sync/irq"]
+smp = ["spinlock/smp"]
 
 preempt = ["irq", "percpu/preempt", "kernel_guard/preempt", "taskctx/preempt"]
 
