Change apps name, add thread_test & coroutine_test.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,10 @@ lto = true
 
 [workspace]
 members = [
-    "apps/helloworld", 
+    "apps/coroutine_test", 
     "apps/user_boot", 
     "apps/fs/shell",
-    "apps/thread_yield",
+    "apps/thread_test",
 
     "evaluation",
 
