--- a/apps/coroutine_test/Cargo.toml
+++ b/apps/coroutine_test/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "helloworld"
+name = "coroutine_test"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 async_std = { path = "../../modules/async_std", features = ["irq", "multitask"] }
-log = "0.4"
