--- a/modules/async_vfs/Cargo.toml
+++ b/modules/async_vfs/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 log = "0.4"
 bitflags = "2.6"
 axerrno = { git = "https://github.com/Starry-OS/axerrno.git" }
+async_utils = { path = "../async_utils" }
