--- a/modules/executor/Cargo.toml
+++ b/modules/executor/Cargo.toml
@@ -37,3 +37,4 @@ async_fs = { path = "../async_fs" }
 axhal = { git = "https://github.com/Starry-OS/axhal.git" }
 riscv = "0.10"
 axfutex = { path = "../axfutex" }
+async_utils = { path = "../async_utils" }
