--- a/modules/runtime/Cargo.toml
+++ b/modules/runtime/Cargo.toml
@@ -29,15 +29,15 @@ axlog = { git = "https://github.com/Starry-OS/axlog.git" }
 axconfig = { git = "https://github.com/Starry-OS/axconfig.git" }
 axalloc = { git = "https://github.com/Starry-OS/axalloc.git" }
 axdriver = { git = "https://github.com/Starry-OS/axdriver.git", optional = true }
-axnet = { git = "https://github.com/Starry-OS/axnet.git", optional = true }
-axdisplay = { git = "https://github.com/Starry-OS/axdisplay.git", optional = true }
+# axnet = { git = "https://github.com/Starry-OS/axnet.git", optional = true }
+# axdisplay = { git = "https://github.com/Starry-OS/axdisplay.git", optional = true }
 crate_interface = { git = "https://github.com/Starry-OS/crate_interface.git" }
 percpu = { git = "https://github.com/Starry-OS/percpu.git", optional = true }
-kernel_guard = { git = "https://github.com/Starry-OS/kernel_guard.git", optional = true }
+kernel_guard = { path = "../kernel_guard", optional = true }
 lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git", optional = true }
 
 
-axhal = { git = "https://github.com/Starry-OS/axhal.git" }
+axhal = { path = "../axhal" }
 async_utils = { path = "../async_utils"}
 async_fs = { path = "../async_fs", optional = true }
 trampoline = { path = "../trampoline" }
