--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,9 @@
+[patch."https://github.com/Starry-OS/kernel_guard.git".kernel_guard]
+path = "modules/kernel_guard"
+
+[patch."https://github.com/Starry-OS/axhal.git".axhal]
+path = "modules/axhal"
+
 [profile.dev]
 lto = true
 
@@ -5,32 +11,5 @@ lto = true
 lto = true
 
 [workspace]
-members = [
-    "apps/coroutine_test", 
-    "apps/user_boot", 
-    "apps/fs/shell",
-    "apps/thread_test",
-
-    "evaluation",
-
-    "modules/async_utils",
-    "modules/async_io", 
-    "modules/async_std", 
-    "modules/async_fs", 
-    "modules/async_vfs", 
-    "modules/aos_api", 
-    "modules/async_mem", 
-    "modules/taskctx", 
-    "modules/trampoline", 
-    "modules/executor", 
-    "modules/sync", 
-    "modules/runtime", 
-    "modules/arch_boot", 
-    "modules/syscall", 
-    "modules/feat", 
-    "modules/syscall_interfaces",
-    "modules/async_utils/afit", 
-    "modules/task_api",
-    "modules/axfutex"
-]
+members = ["apps/coroutine_test", "apps/user_boot", "apps/fs/shell", "apps/thread_test", "evaluation", "modules/async_utils", "modules/async_io", "modules/async_std", "modules/async_fs", "modules/async_vfs", "modules/aos_api", "modules/async_mem", "modules/taskctx", "modules/trampoline", "modules/executor", "modules/sync", "modules/runtime", "modules/arch_boot", "modules/syscall", "modules/feat", "modules/syscall_interfaces", "modules/async_utils/afit", "modules/task_api", "modules/axfutex"]
 resolver = "2"
