--- a/modules/taskctx/Cargo.toml
+++ b/modules/taskctx/Cargo.toml
@@ -27,8 +27,9 @@ spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
 scheduler = { git = "https://github.com/Starry-OS/scheduler.git" }
 percpu = { git = "https://github.com/Starry-OS/percpu.git" }
 
-axhal = { git = "https://github.com/Starry-OS/axhal.git" }
-
+axhal = { path = "../axhal" }
+crate_interface = "0.1"
+kernel_guard = { path = "../kernel_guard" }
 
 [target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
 riscv = "0.11"
