1. Fixed warnings. & Cargo fmt.

--- a/modules/aos_api/Cargo.toml
+++ b/modules/aos_api/Cargo.toml
@@ -11,6 +11,9 @@ irq = ["feat/irq"]
 alloc = ["dep:axalloc", "feat/alloc"]
 multitask = ["feat/multitask"]
 fs = ["dep:async_fs", "feat/fs"]
+myfs = []
+net = []
+display = []
 # net = ["dep:axnet", "feat/net"]
 # display = ["dep:axdisplay", "feat/display"]
 
