修改pipetest，使其测试了async + await、async + non-await、non-async + non-await三种实现方式

--- a/user_apps/pipetest/Cargo.toml
+++ b/user_apps/pipetest/Cargo.toml
@@ -5,3 +5,9 @@ edition = "2021"
 
 [dependencies]
 syscalls = { path = "../../syscalls" }
+
+[features]
+async-await = []
+async-non-await = ["syscalls/thread"]
+non-async-non-await = ["syscalls/thread"]
+default = ["non-async-non-await"]
