在async + non-await、async + await与blocking、non-blocking的各种组合情况下可以正常运行。 （non-async + non-await + non-blocking暂未实现）

--- a/user_apps/pipetest/Cargo.toml
+++ b/user_apps/pipetest/Cargo.toml
@@ -9,6 +9,6 @@ syscalls = { path = "../../syscalls" }
 [features]
 async-await = []
 async-non-await = ["syscalls/thread"]
-non-async-non-await = ["syscalls/thread"]
+# non-async-non-await = ["syscalls/thread"] # 暂未完成
 blocking = ["syscalls/blocking"]
-default = ["async-non-await"]
+default = ["async-non-await", "blocking"]
