--- a/platforms/riscv64-qemu-virt.toml
+++ b/platforms/riscv64-qemu-virt.toml
@@ -20,6 +20,7 @@ phys-virt-offset = "0xffff_ffc0_0000_0000"
 # MMIO regions with format (`base_paddr`, `size`).
 mmio-regions = [
     ["0x0c00_0000", "0x21_0000"],   # PLIC
+    ["0x100_0000", "0x100_0000"],   # MOIC
     ["0x1000_0000", "0x1000"],      # UART
     ["0x1000_1000", "0x8000"],      # VirtIO
     ["0x3000_0000", "0x1000_0000"],  # PCI config space
