--- a/crates/scheduler/Cargo.toml
+++ b/crates/scheduler/Cargo.toml
@@ -12,9 +12,10 @@ keywords = ["Starry"]
 
 [dependencies]
 linked_list = { git = "https://github.com/Starry-OS/linked_list.git" }
-moic_driver = { git = "https://github.com/ATS-INTC/moic_driver.git" }
 lazy_init = { git = "https://github.com/Starry-OS/lazy_init.git" }
 log = "0.4"
+
+taic_driver = { path = "../taic_driver" }
 
 [features]
 taic_load_balanced = []
