--- a/user_apps/std_thread_test/Cargo.toml
+++ b/user_apps/std_thread_test/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-user-task-scheduler = { path = "../../user-task-scheduler" }
+user-lib = { path = "../../user-lib" }
