Add taic wakeup mechanism.

--- a/modules/syscall/Cargo.toml
+++ b/modules/syscall/Cargo.toml
@@ -48,3 +48,5 @@ async_mem = { path = "../async_mem" }
 async_io = { path = "../async_io" }
 
 taic_driver = { path = "../../crates/taic_driver" }
+heapless = "0.8.0"
+syscalls = { version = "0.6", default-features = false }
