--- a/uruntime/Cargo.toml
+++ b/uruntime/Cargo.toml
@@ -15,3 +15,7 @@ sched_taic = []
 cfg-if = "1.0"
 taic_driver = { path = "../crates/taic_driver" }
 syscalls = { path = "../syscalls" }
+heapless = "0.8.0"
+
+[target.'cfg(any(target_arch = "riscv32", target_arch = "riscv64"))'.dependencies]
+riscv = "0.11"
