--- a/uruntime/Cargo.toml
+++ b/uruntime/Cargo.toml
@@ -13,7 +13,7 @@ sched_taic = []
 
 [dependencies]
 cfg-if = "1.0"
-taic_driver = { path = "../crates/taic_driver" }
+taic-driver = { git = "https://github.com/taic-repo/taic-driver.git" }
 syscalls = { path = "../syscalls" }
 heapless = "0.8.0"
 
