--- a/modules/executor/Cargo.toml
+++ b/modules/executor/Cargo.toml
@@ -15,6 +15,8 @@ sched_rr = ["taskctx/sched_rr"]
 sched_cfs = ["taskctx/sched_cfs"]
 sched_taic = ["taskctx/sched_taic"]
 
+default = ["shared_scheduler"]
+
 [dependencies]
 spinlock = { git = "https://github.com/Starry-OS/spinlock.git" }
 axlog = { git = "https://github.com/Starry-OS/axlog.git" }
@@ -40,3 +42,4 @@ riscv = "0.10"
 axfutex = { path = "../axfutex" }
 async_utils = { path = "../async_utils" }
 vdso = { path = "../../vdso" }
+shared_scheduler = { path = "../../vdso/shared_scheduler", optional = true }
